Feat/transaction details layout (#541)
* Added 'wide' property to appPage

* First layout improvement iteration

* Refactored Row Mapping

* translations

* further refactoring

* simple type mappings complete

* fixed message encryption for tx details

* added isAttachmentVersion

* added getAttachmentVersion

* removed assertAttachmentVersion

* better mapping and visualization of different attachment types

* make tests pass :rolleyes

* layout and translation refinements

* removed cell for block for now

* updated changelog

* review cleanups

--- a/web/angular-wallet/src/app/components/page/page.component.html
+++ b/web/angular-wallet/src/app/components/page/page.component.html
@@ -23,7 +23,7 @@
 
   <!-- CENTER -->
   <div class="content-container">
-    <div class="content">
+    <div [ngClass]="{content: true, wide:wide===true}">
       <ng-content></ng-content>
     </div>
   </div>
