--- a/web/angular-wallet/src/app/components/page/page.component.scss
+++ b/web/angular-wallet/src/app/components/page/page.component.scss
@@ -27,8 +27,12 @@
         margin: 0;
         box-shadow: none;
         border-radius: 0;
-        padding: 0;
+        padding: 8px;
       }
+    }
+
+    .wide {
+      max-width: 800px;
     }
   }
 }
