--- a/web/angular-wallet/src/app/main/send-burst/send-burst-form/send-burst-form.component.scss
+++ b/web/angular-wallet/src/app/main/send-burst/send-burst-form/send-burst-form.component.scss
@@ -1,42 +1,75 @@
-mat-form-field {
-  width: 100%;
-  display: block;
-}
+@import "src/@fuse/scss/fuse";
 
-form {
-  margin: 20px 0;
-}
+:host {
 
-.no-balance{
-  color: red;
-  font-weight: bold;
-}
-
-.send-button-wrapper {
-  position: relative;
-
-  .send-button {
-    position: absolute;
-    right: 16px;
-    bottom: 21px;
-
-    &:disabled {
-      opacity: 0.2;
+  .amount-wrapper {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    @include media-breakpoint('xs') {
+      flex-direction: column;
     }
 
-    mat-icon {
-      &.enabled {
-        color: #039be5;
+    mat-form-field:first-child {
+      margin-right: 8px;
+      @include media-breakpoint('xs') {
+        margin-right: 0;
       }
     }
 
-    mat-spinner {
-      top: 1px;
-      left: 10px;
+    .all-icon {
+      margin-left: 10px;
+      padding-top: 5px;
+      font-size: 1.25em;
+      font-weight: 700;
+      color: #666;
+      display: inline-block;
+      cursor: pointer;
     }
+
+  }
+
+  mat-form-field {
+    width: 100%;
+    display: block;
+  }
+
+  form {
+    margin: 20px 0;
+  }
+
+  .no-balance {
+    color: red;
+    font-weight: bold;
+  }
+
+  .send-button-wrapper {
+    position: relative;
+
+    .send-button {
+      position: absolute;
+      right: 16px;
+      bottom: 21px;
+
+      &:disabled {
+        opacity: 0.2;
+      }
+
+      mat-icon {
+        &.enabled {
+          color: #039be5;
+        }
+      }
+
+      mat-spinner {
+        top: 1px;
+        left: 10px;
+      }
+    }
+  }
+
+  a {
+    cursor: pointer;
   }
 }
 
-a { 
-  cursor: pointer;
-}
