--- a/web/angular-wallet/src/app/main/transactions/transaction-table/transaction-table.component.html
+++ b/web/angular-wallet/src/app/main/transactions/transaction-table/transaction-table.component.html
@@ -60,7 +60,7 @@
     </mat-header-cell>
     <mat-cell *matCellDef="let transaction">
       {{
-      convertNQTStringToNumber(transaction.feeNQT) | number: "1.0-4":this.locale
+      convertNQTStringToNumber(transaction.fee) | number: "1.0-4":this.locale
       }}
     </mat-cell>
   </ng-container>
