--- a/web/angular-wallet/src/app/main/send-burst/send-burst-form/send-burst-form.component.html
+++ b/web/angular-wallet/src/app/main/send-burst/send-burst-form/send-burst-form.component.html
@@ -2,20 +2,25 @@
 
   <burst-recipient-input (qrCodeUpload)="onQRUpload($event)" (recipientChange)="onRecipientChange($event)" [disabled]="immutable" ></burst-recipient-input>
 
-  <mat-grid-list cols="2" rowHeight="85px" gutterSize="10px">
-    <mat-grid-tile>
-      <mat-form-field>
-        <input matInput [(ngModel)]="amountNQT" name="amountNQT" placeholder="{{ 'amount' | i18n }}" [disabled]="immutable">
-      </mat-form-field>
-    </mat-grid-tile>
-    <mat-grid-tile *ngIf="feeNQT">
-      <mat-form-field>
-        <input matInput [(ngModel)]="feeNQT" name="feeNQT" placeholder="{{ 'fee' | i18n }}" [disabled]="immutable">
-      </mat-form-field>
-    </mat-grid-tile>
-  </mat-grid-list>
+  <div class="amount-wrapper">
+    <mat-form-field>
+      <div class="container" fxFlex="1 0 auto" fxLayout="row" fxLayoutAlign="start center">
+        <input matInput [(ngModel)]="amount" name="amountNQT" placeholder="{{ 'amount' | i18n }}" [disabled]="immutable">
+        <mat-icon class="all-icon"
+                  matTooltip="{{'spend_all' | i18n}}"
+                  (click)="onSpendAll()"
+        >
+          all_inclusive
+        </mat-icon>
+      </div>
+    </mat-form-field>
 
-  <burst-fee-selector *ngIf="!immutable" [fees]="fees" [(feeNQT)]="feeNQT"></burst-fee-selector>
+    <mat-form-field *ngIf="fee">
+      <input matInput [(ngModel)]="fee" name="feeNQT" placeholder="{{ 'fee' | i18n }}" [disabled]="immutable">
+    </mat-form-field>
+  </div>
+
+  <burst-fee-selector *ngIf="!immutable" [fees]="fees" [(feeNQT)]="fee"></burst-fee-selector>
 
   <mat-checkbox labelPosition="before" (click)="showMessage=!showMessage">{{ "add_message_q" | i18n }}</mat-checkbox>
 
@@ -70,7 +75,7 @@
 
 
   <strong>Total:&nbsp;</strong>
-  <span [class.no-balance]="!hasSufficientBalance()">{{ getTotal() | number: '1.0-6': this.language }} BURST</span> -
+  <span [class.no-balance]="!hasSufficientBalance()">{{ getTotal() | number: '1.0-10': this.language }} BURST</span> -
   <a (click)="advanced=!advanced"><em>{{ advanced ? "basic" : "advanced" | i18n }}</em></a>
 
 </form>
