--- a/web/angular-wallet/src/app/setup/account/create-active/existing/existing.component.html
+++ b/web/angular-wallet/src/app/setup/account/create-active/existing/existing.component.html
@@ -2,7 +2,7 @@
 <div class="passphrase-container">
   <mat-form-field class="input">
      <input matInput type="text" placeholder="Passphrase" required [(ngModel)]="passphrase">
-     <mat-hint>{{ 'error_passphrase_required' | i18n }}</mat-hint>
+     <mat-hint>{{ 'error_passphrase_required' | i18n }}</mat-hint> <!--TODO translation -->
   </mat-form-field>
 </div>
 <div class="text-center navigation">
