feat(ledger): split desktop and web services

--- a/web/angular-wallet/src/app/setup/account/create-ledger/create-ledger.component.html
+++ b/web/angular-wallet/src/app/setup/account/create-ledger/create-ledger.component.html
@@ -3,5 +3,5 @@
     <input matInput type="text" placeholder="Account Index (0-255)" required [(ngModel)]="accountIndex">
   </mat-form-field>
   <button class="btn-error" mat-raised-button routerLink="/login">{{ 'cancel' | i18n }}</button>
-  <button class="btn-success" mat-raised-button (click)="submit(this.accountIndex)">{{ 'submit' | i18n }}</button>
+  <button class="btn-success" mat-raised-button (click)="submit()">{{ 'submit' | i18n }}</button>
 </div>
