--- a/web/angular-wallet/src/app/main/send-burst/send-multi-out-form/send-multi-out-form.component.html
+++ b/web/angular-wallet/src/app/main/send-burst/send-multi-out-form/send-multi-out-form.component.html
@@ -3,7 +3,7 @@
   <mat-checkbox labelPosition="before" (click)="toggleSameAmount()" class="same-amount">{{ "same_out" | i18n }}?</mat-checkbox>
 
   <mat-form-field *ngIf="sameAmount">
-    <input matInput [(ngModel)]="amountNQT" name="amountNQT" placeholder="{{ 'amount' | i18n }}">
+    <input matInput [(ngModel)]="amount" name="amountNQT" placeholder="{{ 'amount' | i18n }}">
   </mat-form-field>
 
 
@@ -26,10 +26,10 @@
   <button mat-button type="button" class="add-recipient" (click)="addRecipient($event)">{{ "add_recipient" | i18n }}</button>
 
   <mat-form-field>
-    <input matInput [(ngModel)]="feeNQT" name="feeNQT" placeholder="{{ 'fee' | i18n }}">
+    <input matInput [(ngModel)]="fee" name="feeNQT" placeholder="{{ 'fee' | i18n }}">
   </mat-form-field>
 
-  <burst-fee-selector [fees]="fees" [(feeNQT)]="feeNQT"></burst-fee-selector>
+  <burst-fee-selector [fees]="fees" [(feeNQT)]="fee"></burst-fee-selector>
 
   <div *ngIf="advanced">
     <mat-form-field>
