--- a/web/angular-wallet/src/app/main/send-burst/send-multi-out-form/send-multi-out-form.component.html
+++ b/web/angular-wallet/src/app/main/send-burst/send-multi-out-form/send-multi-out-form.component.html
@@ -12,7 +12,7 @@
     <div class="recipients-item">
       <burst-recipient-input (recipientChange)="onRecipientChange($event, i)"></burst-recipient-input>
       <mat-form-field *ngIf="!sameAmount">
-        <input matInput [(ngModel)]="recipients[i].amountNQT" name="amountNQT{{i}}"
+        <input matInput [(ngModel)]="recipients[i].amount" name="amountNQT{{i}}"
                placeholder="{{ 'amount' | i18n }}">
       </mat-form-field>
 <!--
