Feat/burstjs/send multi out refactoring (#558)
* added new methods and respective tests

* updated changelog by breaking changes

* marked as deprecated

* updated changelog

* removed Transaction object from function parameter

* sendAmountToMultipleRecipients added, minor refactorings

* constructAttachment unit test

* added sendAmount and a refactored attachment constructor

* added sendAmount tests

* fixed build problem

* Renaming Attachment interfaces

* Added new send methods to composeApi

* Moved crypto typings into src

* updated package-lock

* Adjusted frontend to work with burstjs changes - started substituting sendMoney

* applying same multi out on angular [wip]

* applying same multi out on angular - works

* some renamings

* fixed localhost node version

* trying to fix multi out fee slider

* fixed canSubmit for empty recipient list

* review cleanups

* fixed circular dep warning for bundle

* remove cached node_modules for travis

* trying to make travis work

* seems like a fix

* fix ci builds

* back to node V12

* renamed amount in SendBurstMultipleSameRequest

* reverted errounous renaming (webstorm thing)

--- a/web/angular-wallet/src/app/main/send-burst/send-burst-form/send-burst-form.component.html
+++ b/web/angular-wallet/src/app/main/send-burst/send-burst-form/send-burst-form.component.html
@@ -16,7 +16,7 @@
       </div>
     </mat-form-field>
 
-    <mat-form-field *ngIf="fee">
+    <mat-form-field>
       <input matInput [(ngModel)]="fee" name="fee" placeholder="{{ 'fee' | i18n }}" [disabled]="immutable">
     </mat-form-field>
   </div>
