--- a/docs/assets/css/custom.css
+++ b/docs/assets/css/custom.css
@@ -82,3 +82,22 @@ a {
         animation: octocat-wave 560ms ease-in-out
     }
 }
+
+.deprecated {
+    background: #f0db4f;
+    padding: 1.25em;
+    border-radius: 4px;
+    border: 1px solid;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    display: inline-block;
+    width: -webkit-fill-available;
+    width: -moz-available;
+}
+
+.deprecated::before {
+    content: "Deprecation Warning";
+    display: block;
+    margin-bottom: 1em;
+    font-weight: bold;
+}
