fix(feeSelector): fix bug where fee selector would not bind

--- a/web/angular-wallet/src/app/layout/components/burst-fee-selector/burst-fee-selector.component.scss
+++ b/web/angular-wallet/src/app/layout/components/burst-fee-selector/burst-fee-selector.component.scss
@@ -4,7 +4,7 @@
     align-items: center;
 
     .pill {
-      background: #428bca;
+      background: #039be5;
       color: #fff;
       border-radius: 3px;
       padding: 1px 5px;
