Ramping up no settings module...

--- a/web/angular-wallet/src/app/setup/setup.component.html
+++ b/web/angular-wallet/src/app/setup/setup.component.html
@@ -1,3 +1,5 @@
+<!-- TODO: REMOVE me...because I moved to main/settings! -->
+
 <app-page title="{{ 'settings' | i18n }}" >
   <div class="p-24" fxLayout="column">
     <mat-form-field>
