--- a/web/angular-wallet/src/app/main/settings/settings.component.scss
+++ b/web/angular-wallet/src/app/main/settings/settings.component.scss
@@ -11,6 +11,10 @@
       width: 20% !important;
     }
 
+    .error-icon {
+      color: darkred;
+    }
+
     .button-wrapper {
       display: flex;
       flex-direction: row;
