--- a/web/angular-wallet/src/app/main/send-burst/send-multi-out-form/send-multi-out-form.component.html
+++ b/web/angular-wallet/src/app/main/send-burst/send-multi-out-form/send-multi-out-form.component.html
@@ -1,6 +1,17 @@
 <form (ngSubmit)="onSubmit($event);" #sendBurstForm="ngForm">
 
-  <mat-checkbox labelPosition="before" (click)="toggleSameAmount()" class="same-amount">{{ "same_out" | i18n }}?</mat-checkbox>
+  <div class="action-container">
+    <mat-checkbox labelPosition="before" (click)="toggleSameAmount()" class="same-amount">{{ "same_out" | i18n }}?
+    </mat-checkbox>
+    <div class="button-wrapper">
+      <button mat-icon-button color="accent" (click)="addRecipient($event)"  matTooltip="{{'add_recipient' | i18n}}">
+        <mat-icon>add_box</mat-icon>
+      </button>
+      <button mat-icon-button color="accent" (click)="addBatchedRecipient($event)"  matTooltip="{{'add_recipient_batch' | i18n}}">
+        <mat-icon>unarchive</mat-icon>
+      </button>
+    </div>
+  </div>
 
   <mat-form-field *ngIf="sameAmount">
     <input matInput [(ngModel)]="amount" name="amount" placeholder="{{ 'amount' | i18n }}">
@@ -15,15 +26,13 @@
         <input matInput [(ngModel)]="recipients[i].amount" name="amount{{i}}"
                placeholder="{{ 'amount' | i18n }}">
       </mat-form-field>
-<!--
-      FUTURE FEATURE
-      <mat-icon *ngIf="recipients.length > 1" matTooltip="{{'delete' | i18n}}" (click)="onDeleteRecipient(i)" >delete</mat-icon>
--->
+      <!--
+            FUTURE FEATURE
+            <mat-icon *ngIf="recipients.length > 1" matTooltip="{{'delete' | i18n}}" (click)="onDeleteRecipient(i)" >delete</mat-icon>
+      -->
     </div>
 
   </ng-container>
-
-  <button mat-button type="button" class="add-recipient" (click)="addRecipient($event)">{{ "add_recipient" | i18n }}</button>
 
   <mat-form-field>
     <input matInput [(ngModel)]="fee" name="fee" placeholder="{{ 'fee' | i18n }}">
