--- a/web/angular-wallet/src/app/main/send-burst/batch-recipients-dialog/batch-recipients-dialog.component.html
+++ b/web/angular-wallet/src/app/main/send-burst/batch-recipients-dialog/batch-recipients-dialog.component.html
@@ -1,9 +1,20 @@
-<div class="warn-dialog p-24">
+<div class="w-100-p p-24">
   <h1 mat-dialog-title>Add Recipients using CSV</h1>
   <div mat-dialog-content>
-    <h1>Foo</h1>
+    <form [formGroup]="formGroup">
+      <mat-form-field class="w-100-p">
+      <textarea
+        matInput
+        cdkTextareaAutosize
+        cdkAutosizeMinRows="4"
+        cdkAutosizeMaxRows="10"
+        placeholder="Paste your CSV content here"
+        formControlName="recipientsInput"
+      ></textarea>
+      </mat-form-field>
+    </form>
   </div>
-  <div mat-dialog-actions>
+  <div mat-dialog-actions class="right">
     <button mat-button [mat-dialog-close]>{{ 'close' | i18n }}</button>
     <button mat-button [mat-dialog-close]>{{ 'cancel' | i18n }}</button>
     <button mat-button [mat-dialog-close]="true" color="accent">{{ 'submit' | i18n }}</button>
