--- a/web/angular-wallet/src/app/main/send-burst/batch-recipients-dialog/batch-recipients-dialog.component.scss
+++ b/web/angular-wallet/src/app/main/send-burst/batch-recipients-dialog/batch-recipients-dialog.component.scss
@@ -1,12 +1,16 @@
-.warn-dialog{
+@import "src/@fuse/scss/fuse";
+
+:host{
   display: flex;
   align-items: center;
   flex-flow: column;
-}
 
-ul.recipient-list {
-  list-style: none;
-  font-family: monospace;
-  font-size: 16px;
-  padding: 0 0.5em;
+  .right {
+    align-content: center;
+    justify-content: flex-end;
+    @include media-breakpoint('xs') {
+      justify-content: center;
+
+    }
+  }
 }
