Added some missing i8n strings and updated pt_br

--- a/web/angular-wallet/src/app/main/dashboard/dashboard.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/dashboard.component.html
@@ -69,7 +69,7 @@
             </div>
             <a *ngIf="dataSource && dataSource.data.length"
                class="p-16" fxLayoutAlign="end"
-               [routerLink]="'/transactions'">All Transactions</a>
+               [routerLink]="'/transactions'">{{ 'all_transactions' | i18n }}</a>
           </div>
         </div>
         <div class="widget" fxFlex="100" fxFlex.gt-sm="40">
